--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,6 +481,13 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   background: url("../img/hero-bg1.jpg") center top no-repeat;
 }
 
+#hero-no-slider h1 {
+  color: #000000;
+  margin-bottom: 15px;
+  font-size: 48px;
+  font-weight: 700;
+}
+
 #hero-no-slider h2 {
   color: #000000;
   margin-bottom: 15px;
@@ -888,6 +895,7 @@ section {
 .features h3 {
   font-weight: 400;
   font-size: 24px;
+  font-weight: bold;
 }
 
 .features ul {
